Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12810

QIcon::fromTheme() does not contain any maemo specific code

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.0
    • 4.6.2
    • (Inactive) Maemo 5
    • None
    • Maemo 5 (Nokia N900)
    • 8cdac7d1d06dc70d19466b89ab5e18ce0212a454

    Description

      QIcon::fromTheme( name ) should return the icon associated with "name" for the currently used icon theme. In practice it always returns an icon from hicolor theme.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            griebl Robert Griebl (closed Nokia identity) (Inactive)
            redfox2807 Andrew Korolev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes