Use the correct icon theme name on Maemo 5

Task:        QTBUG-12810
Reviewed-By: Harald Fernengel